--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 7,
-"scroll_position": 0.0,
+"scroll_position": 43.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -139,7 +139,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 17,
-"scroll_position": 11.0,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -149,16 +149,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 3.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 2,
-"selection_to_column": 55,
-"selection_to_line": 2,
+"row": 5,
+"scroll_position": 65.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -167,16 +163,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 9.0,
+"row": 25,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 12,
-"selection_from_line": 3,
-"selection_to_column": 32,
-"selection_to_line": 3,
+"selection_from_line": 25,
+"selection_to_column": 42,
+"selection_to_line": 25,
 "syntax_highlighter": "GDScript"
 }
 
@@ -221,11 +217,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
-"folded_lines": Array[int]([56, 67]),
-"h_scroll_position": 0,
-"row": 80,
-"scroll_position": 54.0,
+"column": 51,
+"folded_lines": Array[int]([63, 74]),
+"h_scroll_position": 222,
+"row": 33,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -239,7 +235,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 30,
-"scroll_position": 10.0,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -249,11 +245,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 8.0,
+"row": 4,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
