--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -167,12 +167,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 3.0,
-"selection": false,
+"row": 9,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 9,
+"selection_to_column": 32,
+"selection_to_line": 9,
 "syntax_highlighter": "GDScript"
 }
 
@@ -217,11 +221,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
-"folded_lines": Array[int]([69, 80]),
+"column": 0,
+"folded_lines": Array[int]([75, 86]),
 "h_scroll_position": 0,
-"row": 120,
-"scroll_position": 95.0,
+"row": 21,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
