--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://NewGame/acolyte.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://PrefabedScenes/", "res://NewGame/", "res://GameScene/", "res://Art/", "res://Art/SourceFiles/", "res://Art/icons/", "res://Art/coin/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/StaticUpgrades_btn.gdshader")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scenes/", "res://PrefabedScenes/", "res://NewGame/", "res://GameScene/", "res://Art/", "res://Art/SourceFiles/", "res://Art/icons/", "res://Art/coin/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,25 +28,25 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://HUD/hud.tscn", "res://UI/StaticUpgrades_ui.tscn", "res://UI/spawn_upgrades_ui.tscn", "res://UI/lower_bar.tscn")
-current_scene="res://NewGame/acolyte.tscn"
+current_scene="res://Scenes/spawning_area.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=7
 
 [ScriptEditor]
 
 open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://UI/lower_bar.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd", "res://UI/spawn_upgrades_ui.gd", "res://UI/StaticUpgrades_ui.gd", "res://Singletons/upgrades_manager.gd"]
-selected_script="res://game_manager.gd"
+selected_script="res://UI/StaticUpgrades_ui.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=117
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://UI/StaticUpgrades_btn.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://UI/StaticUpgrades_btn.gdshader"
 
 [editor_log]
 
