--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=51
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
+dock_hsplit_2=284
 dock_hsplit_3=-278
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://HUD/hud.tscn", "res://UI/StaticUpgrades_ui.tscn", "res://UI/spawn_upgrades_ui.tscn", "res://UI/lower_bar.tscn")
-current_scene="res://Scenes/spawning_area.tscn"
+current_scene="res://UI/StaticUpgrades_ui.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://UI/lower_bar.gd", "res://NewGame/new_game.gd", "res://NewGame/Scull.gd", "res://Scenes/spawning_area.gd", "res://UI/spawn_upgrades_ui.gd", "res://UI/StaticUpgrades_ui.gd", "res://Singletons/upgrades_manager.gd"]
-selected_script="res://Scenes/spawning_area.gd"
+selected_script="res://UI/StaticUpgrades_ui.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=117
