--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/stejs/Downloads/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
+executable_path="/private/var/folders/z0/9bvxc6wx7vl7cs_yj9yhmlxm0000gn/T/AppTranslocation/3D423AAF-D904-4F7B-B45D-5D4A0D9E72E3/d/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 tile_source_sort=0
 tile_snap_option=0
@@ -14,7 +14,7 @@ run_reload_scripts=true
 [color_picker]
 
 presets=[Color(0, 0.478431, 0.764706, 1), Color(0.0627451, 0.698039, 0.937255, 1), Color(0.0235294, 0.113725, 0.329412, 1), Color(0.811765, 0.866667, 1, 1), Color(0.423529, 0.172549, 0.854902, 1), Color(0.552941, 0.0980392, 0.843137, 1), Color(0.156863, 0.0784314, 0.305882, 1), Color(0.921569, 0.878431, 1, 1), Color(0.768627, 0.113725, 0.239216, 1), Color(1, 0.254902, 0.490196, 1), Color(0.45098, 0.152941, 0.360784, 1), Color(1, 0.858824, 0.956863, 1), Color(1, 0.717647, 0.188235, 1), Color(1, 0.835294, 0, 1), Color(0.870588, 0.313726, 0.168627, 1), Color(1, 0.92549, 0.788235, 1), Color(0.388235, 0.8, 0.372549, 1), Color(0.623529, 0.866667, 0.317647, 1), Color(0.0823529, 0.34902, 0.247059, 1), Color(0.866667, 1, 0.94902, 1), Color(0.427451, 0.239216, 0.172549, 1), Color(0.690196, 0.341176, 0.215686, 1), Color(0.415686, 0.0980392, 0, 1), Color(1, 0.890196, 0.890196, 1), Color(0.792157, 0.792157, 0.792157, 1), Color(1, 1, 1, 1), Color(0.152941, 0.168627, 0.188235, 1), Color(0.952941, 0.972549, 0.996078, 1)]
-recent_presets=PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.454902, 0, 0, 0, 0.403922, 0, 0, 0, 0.321569, 0.297399, 0.613018, 0.284883, 1, 0.260652, 0.540835, 0.249435, 1, 1, 1, 1, 0, 0.388235, 0.8, 0.372549, 1, 1, 1, 1, 1)
+recent_presets=PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.454902, 0, 0, 0, 0.403922, 0, 0, 0, 0.321569, 0.297399, 0.613018, 0.284883, 1, 0.260652, 0.540835, 0.249435, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0.388235, 0.8, 0.372549, 1)
 
 [project_settings]
 
