--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Fonts/aldo_the_apache/AldotheApache.ttf")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Fonts/", "res://Fonts/aldo_the_apache/", "res://Art/SourceFiles/", "res://Art/icons/", "res://Art/coin/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://HUD/hud.tscn", "res://UI/StaticUpgrades_ui.tscn", "res://UI/spawn_upgrades_ui.tscn", "res://UI/lower_bar.tscn")
-current_scene="res://NewGame/new_game.tscn"
+current_scene="res://UI/lower_bar.tscn"
 center_split_offset=-310
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://UI/lower_bar.gd", "res://NewGame/new_game.gd", "res://NewGame/Scull.gd", "res://Scenes/spawning_area.gd", "res://UI/spawn_upgrades_ui.gd", "res://UI/StaticUpgrades_ui.gd", "res://Singletons/upgrades_manager.gd"]
-selected_script="res://NewGame/new_game.gd"
+selected_script="res://UI/lower_bar.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=117
