--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 67.0,
+"row": 19,
+"scroll_position": 69.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -135,12 +135,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": false,
+"row": 10,
+"scroll_position": 47.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 10,
+"selection_to_column": 26,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -219,11 +223,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 60,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 15.0,
+"row": 51,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
