--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,16 +21,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 3,
-"selection_to_column": 22,
-"selection_to_line": 3,
+"row": 68,
+"scroll_position": 60.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -139,12 +135,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 71,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 39.0,
-"selection": false,
+"row": 23,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 21,
+"selection_from_line": 23,
+"selection_to_column": 22,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -153,16 +153,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 86.0,
+"row": 101,
+"scroll_position": 93.0,
 "selection": true,
-"selection_from_column": 4,
-"selection_from_line": 18,
-"selection_to_column": 26,
-"selection_to_line": 18,
+"selection_from_column": 14,
+"selection_from_line": 101,
+"selection_to_column": 15,
+"selection_to_line": 101,
 "syntax_highlighter": "GDScript"
 }
 
@@ -175,7 +175,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 23,
-"scroll_position": 7.0,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -189,7 +189,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 30,
-"scroll_position": 0.0,
+"scroll_position": 32.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -227,11 +227,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 65,
-"scroll_position": 53.5,
+"row": 59,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -263,6 +263,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/coin_animation.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
